add trajectories to autonmanager